
v1.2 
# gözden geçirme: 24.09.2022 yayın: 27.09.2022
yeni özellik: entryi favlayanları engelle 
ekşi hesabına giriş yapılmadıysa uyarı vermesi sağlandı. (sadece fav'dan engelleme modu için)
kullanıcı sayfayı eliyle kapattığında uygulamanın çökmesi engellendi. 
arayüz sadeleştirildi başlatma ve durdurma butonları kaldırıldı 
eklenti çalışırken diğer sayfalarda yapılan işlemlerin eklentiye etki etmesi problemi çözüldü.
ekşi nicknamelerindeki whitespaceler tire-ye çevrilerek bug çözüldü.
sayfanın yüklenmesi tab listener api ile dinlendiğinde gereksiz yere bekleniyordu yerine webnavigation api kullanıldı. 
böylece adblocker gibi sayfaya müdahale eden eklentilerin neden olduğu sorunlar giderildi.
url validation uzun sürdüğü için kaldırıldı.
yazılımın bazı kısımları daha modüler hale getirildi.
js dosyalarının isimleri ve içerikleri refactor edildi.

v1.3
klasör yapısı düzenlendi.
manifestteki semsiye.png'nin web accessable resource path'i düzenlendi.
listeden yazar engelle sayfası options page yerine normal sayfaya çevrildi.

SONRAKİ GÜNCELLEMEDE YAPILMASI PLANLANANLAR
kullanıcıların benzersiz idsi alınmalı
logger mekanizması geliştirilmeli
toplanan veriler (loglar) servera gönderilmeli
server yazılımı yazılmalı
server ile haberleşme şifreli olmalı
[belki]engel nedeni seçilebilmeli
istatiki sonuçlar görüntülenebilmeli
[belki]istatistiki verilere göre engel yapılabilmeli
10000 yazarı engellediği görüldü (5000 yazar ekşi limiti) readme sayfasına eklenebilir.
çok uzun yazarlı entrylerde liste scrap edilirken bilgisayar ya da internet yavaşsa timeout olabiliyor şu an 15 saniye limiti var 
github sayfasını ekle(projenin)

BİR ARA YAPILMASI PLANLANANLAR
firefox desteği (hiçbir şey düzgün çalışmıyor, manifest v3 desteği bile tam gelmemiş)
listeneden engelleme için ekşi hesabına girilip girilmediği kontrol edilmeli
log mekanizması daha iyi hale getirilmeli
engellenen yazarların engeli kaldırılabilmeli
google analytics