@@ -1,20 +1,28 @@
 'use strict';
+console.log("bg: init.");
 
-console.log("background.js has been started.");
+try {
+  importScripts("redirectHandler.js", "utils.js");
+} catch (error) {
+  console.error(error);
+}
 
-let g_isProgramActive = false; // track g_isProgramActive info to prevent multiple starts from gui
-let g_earlyStopCommand = false; // early stop command might be recevied from gui to stop program execution
-let g_tabId = -1; // chrome assigns an id for every tab 
-let g_counter = 0; // number of times the page is loaded
-let g_latestContentScriptInfo = ""; // JSON Obj, info about latest executed content script
-let g_url = "";
-let g_isTabClosedByUser = false;
-let g_isBanUserSuccessfull = false;
-let g_isBanTitleSuccessfull = false;
-let g_ResolvePageProcess; // resolve function of page process's promise
-let g_rejectPageProcess; // reject function of page process's promise
-let g_isFirstAuthor = true;
-let g_clientName = "";
+let redirectHandler = new RedirectHandler();
+
+let g_isProgramActive = false;        // to prevent multiple starts from gui
+let g_earlyStopCommand = false;       // early stop command might be recevied from gui to stop program execution
+let g_tabId = -1;                     // tab id of the new tab (will be assigned by browser)
+
+let g_counter = 0;                    // number of times the page is loaded (for every author's page)
+let g_latestContentScriptInfo = "";   // JSON Obj, info about latest executed content script
+let g_url = "";                       // target url
+let g_isTabClosedByUser = false;      // user might close the tab before program finished
+let g_isBanUserSuccessfull = false;   // is target user banned successfully
+let g_isBanTitleSuccessfull = false;  // is target user's titles banned succesfully
+let g_ResolvePageProcess;             // function, resolve function of page process's promise
+let g_rejectPageProcess;              // function, reject function of page process's promise
+let g_isFirstAuthor = true;           // is the program tries to ban the first user in list
+let g_clientName = "";                // client's author name
     
 // listen popup.js for runtime messages
 chrome.runtime.onMessage.addListener(function popupMessageListener(message, sender, sendResponse) {
@@ -29,6 +37,7 @@ chrome.runtime.onMessage.addListener(function popupMessageListener(message, send
 
 async function startProcess()
 {
+  RedirectHandler.prepareHandler();
   g_tabId = -1; // clear variable
 	g_isFirstAuthor = true;
   
@@ -42,6 +51,15 @@ async function startProcess()
     console.log("Program has been finished (getUserList function failed)");
   }
   else{
+    
+    chrome.tabs.onRemoved.addListener(PageCloseListener);
+    // register function to call every time the page is updated
+    // chrome.tabs.onUpdated.addListener(DOMContentLoadedListener);
+    chrome.webNavigation.onDOMContentLoaded.addListener(DOMContentLoadedListener)
+    
+    // register function to call every time a content script sends a message
+    chrome.runtime.onMessage.addListener(ContentScriptMessageListener);
+    
     let successfullBans = 0;
     let pageResult;
     for(let i = 0; i < userListArray.length; i++) {
@@ -62,6 +80,17 @@ async function startProcess()
         break;
       }
     }
+    
+    // remove onMessage event as it may get duplicated
+    console.log("ContentScriptMessageListener removed.");
+    chrome.runtime.onMessage.removeListener(ContentScriptMessageListener);
+    
+    // remove tab onUpdate event to prevent duplicated listener
+    console.log("DOMContentLoadedListener removed.");
+    chrome.tabs.onUpdated.removeListener(DOMContentLoadedListener);
+    
+    console.log("PageCloseListener removed.");
+    chrome.tabs.onRemoved.removeListener(PageCloseListener);
 
     makeNotification(userListArray.length + ' kisilik listedeki ' + successfullBans + ' kisi engellendi.');
     closeLastTab(pageResult.tabID);   
@@ -81,16 +110,6 @@ function PageCloseListener(tabid, removeInfo)
     console.log("tab " + tabid + " closed by user");
     console.log("automatically early stop command was generated to stop the process.")
     g_earlyStopCommand = true;
-    
-    // last actions should be taken to properly stop process
-    
-    // remove onMessage event as it may get duplicated
-    console.log("ContentScriptMessageListener removed.");
-    chrome.runtime.onMessage.removeListener(ContentScriptMessageListener);
-    
-    // remove tab onUpdate event to prevent duplicated listener
-    console.log("DOMContentLoadedListener removed.");
-    chrome.tabs.onUpdated.removeListener(DOMContentLoadedListener);
       
     // resolve Promise after content script has executed
     g_ResolvePageProcess({result:"promise::fail", tabID: g_tabId});
@@ -101,23 +120,25 @@ function PageCloseListener(tabid, removeInfo)
 // this function will be called every time any page is updated (when domcontent loaded)
 function DOMContentLoadedListener(details) {
   
-  // saved values from latest executed content script
-  let res = g_latestContentScriptInfo.res;
-  let op = g_latestContentScriptInfo.op;
-  let mode = g_latestContentScriptInfo.mode;
-  let target = g_latestContentScriptInfo.target;
-  
-  // outgoing values to content script
-  let executeOp = "";
-  let executeMode = "";
-  let executeTarget = "";
-  
   // filter other page updates by using tab id
   if(details.tabId === g_tabId && decodeURIComponentForEksi(details.url) === g_url) {
     g_counter++;
     console.log("g_counter: " + g_counter + " tab id: "+ details.tabId + " frame id: " + details.frameId + " url: " + details.url);
     
+    // saved values from latest executed content script
+    let res = g_latestContentScriptInfo.res;
+    let op = g_latestContentScriptInfo.op;
+    let mode = g_latestContentScriptInfo.mode;
+    let target = g_latestContentScriptInfo.target;
+    
+    // outgoing values to content script
+    let executeOp = "";
+    let executeMode = "";
+    let executeTarget = "";
+    
+    
     if(g_counter === 1){
+      RedirectHandler.stopRedirectTimer();
 			if(g_isFirstAuthor)
 			{
 				g_isFirstAuthor = false;
@@ -166,7 +187,6 @@ function DOMContentLoadedListener(details) {
     
   }
 }
-
 
 // this function will be called every time a content script sends a message
 function ContentScriptMessageListener(message, sender, sendResponse) {
@@ -234,18 +254,6 @@ function ContentScriptMessageListener(message, sender, sendResponse) {
     //all actions have been completed.
     
     g_isBanTitleSuccessfull = res === "res::success"; 
-    
-    // remove onMessage event as it may get duplicated
-    console.log("ContentScriptMessageListener removed.");
-    chrome.runtime.onMessage.removeListener(ContentScriptMessageListener);
-    
-    // remove tab onUpdate event to prevent duplicated listener
-    console.log("DOMContentLoadedListener removed.");
-    chrome.tabs.onUpdated.removeListener(DOMContentLoadedListener);
-    
-    // remove tab close event listener to prevent starting the process 'early stop' caused by usual closed tabs
-    console.log("PageCloseListener removed.");
-    chrome.tabs.onRemoved.removeListener(PageCloseListener);
       
     // resolve Promise after content script has executed
     if(g_isBanUserSuccessfull && g_isBanTitleSuccessfull){
@@ -274,164 +282,8 @@ async function pageProcess(url) {
     g_isBanTitleSuccessfull = false;
     g_isTabClosedByUser = false;
     
-    // register function to call every time a page is closed (will be called multiple times because of iframes)
-    chrome.tabs.onRemoved.addListener(PageCloseListener);
-    
-    // register function to call every time the page is updated
-    // chrome.tabs.onUpdated.addListener(DOMContentLoadedListener);
-    chrome.webNavigation.onDOMContentLoaded.addListener(DOMContentLoadedListener)
-    
-    // register function to call every time a content script sends a message
-    chrome.runtime.onMessage.addListener(ContentScriptMessageListener);
-    
-    await handleTabOperations(url);
-
+    g_tabId = await RedirectHandler.handleTabOperations(url);
   });
-}
-
-  
-
-/* <---------------------------     UTILS     --------------------------------------> */
-/* <--------------------------------------------------------------------------------> */
-/* <--------------------------------------------------------------------------------> */
-
-async function handleTabOperations(url)
-{
-    if(g_tabId === -1){
-      // create new tab when program started
-      g_tabId = await createNewTab(url);
-      return 0;
-    }
-    else{
-      chrome.tabs.query({}, async function(tabs) {
-        
-        for (let tab of tabs) {
-          if(tab.id == g_tabId){
-            // the tab that was opened by this program exist, redirect the tab to a new url
-            await redirectNewURL(url, g_tabId);
-            return 0;
-          }
-        }
-        
-        // the tab that was opened by this program not exist (possibly closed by user), create a new tabID
-        console.log("previous tab is closed, so new tab will be opened.");
-        g_tabId = await createNewTab(url);
-        return 0;
-      }); 
-    }
-}
-
-// input: url string
-// output: tab id of the new tab opened
-async function createNewTab(url)
-{
-  return new Promise((resolve, reject) => {
-    // active:false means, it will not be focused
-    chrome.tabs.create({url: url, active: false}, function(newTab) {
-      resolve(newTab.id);
-    });
-  });
-}
-
-// input: url string, tab_id
-// output: - (promise)
-async function redirectNewURL(url, tab_id)
-{
-  return new Promise((resolve, reject) => {
-    // active:false means, it will not be focused
-    chrome.tabs.update(tab_id, {url: url, active: false}, function(newTab) {
-      resolve();
-    });
-  });
-}
-
-// backgroung.js dont have a html page so cannot alert, instead notifications can be used
-function makeNotification(message)
-{
-  chrome.notifications.create({
-    type: 'basic',
-    iconUrl: '../img/eksiengel16.png',
-    title: 'Notification',
-    message: message,
-    priority: 1
-  });
-}
-
-// clean collected user list by erasing empty inputs 
-// convert nicknames to the url
-// whitespaces should be - according to ekşisözlük name rules
-function cleanUserList(arr)
-{
-  for(let i = arr.length - 1; i >= 0; i--) 
-  {
-    // if empty, delete it
-    if(arr[i] == ''){
-      arr.splice(i, 1); // remove ith element
-    }
-    else{
-      // replace every whitespace with -
-      arr[i] = arr[i].replace(/ /gi, "-");
-      
-      // convert nickname to the url
-      arr[i] = "https://eksisozluk.com/biri/" + arr[i];
-    }
-  }
-}
-
-function closeLastTab(target_tab_id)
-{
-  let isTabExist = false; // somehow last tab could be closed already
-  chrome.tabs.query({}, function(tabs) {
-    // access all the open tabs and compare
-    for (let tab of tabs) {
-      if(tab.id == target_tab_id){
-        isTabExist = true;
-        console.log("last tab will be closed");
-        chrome.tabs.remove(tab.id); // close last tab
-      }
-    }
-    if(!isTabExist){
-      console.log("Last tab could not be closed. (may be already closed)");
-    }
-  }); 
-}
-
-// get userList from storage api
-// output: array (if fails, returns empty array)
-async function getUserList()
-{
-  return new Promise((resolve, reject) => {
-    chrome.storage.local.get("userList", function(items){
-      if(!chrome.runtime.error)
-      {
-        if(items != undefined && items.userList != undefined)
-        {
-          resolve(items.userList.split("\n"));  
-        }
-        else 
-        {
-          console.log("empty list from storage api");
-          resolve([]);
-        }
-      }
-      else 
-      {
-        console.log("chrome.storage.local runtime err");
-        makeNotification("chrome.storage.local runtime hatası");
-        resolve([]);
-      }
-    }); 
-  });
-}
-
-// example input: abc%20def%21gh
-// output: abc-def!gh
-function decodeURIComponentForEksi(url)
-{
-  let decodedUrl = decodeURIComponent(url);
-  // replace every whitespace with - (eksisozluk.com convention)
-  decodedUrl.replace(/ /gi, "-");
-  return decodedUrl;
 }
 
 function executeContentScript(op, mode, target)
@@ -455,7 +307,6 @@ function executeContentScript(op, mode, target)
       });
     } // callback function
   );
-  
 }
 
 function printExecuteScriptResult(configText)
